# hl7-parser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
hl7parser/: __main__.py  aliases.py  consts.py  db.py  parser.py  primitive_validators.py  writer.py
hl7parser/data/hl7db/: 2.1.json  2.2.json  2.3.1.json  2.3.json  2.4.json  2.5.1.json  2.5.json  2.6.json  2.7.1.json  2.7.json  2.8.1.json  2.8.2.json  2.8.json
hl7parser/generators/: __init__.py  datatype.py  group.py  init.py  message.py  multi_field.py  segment.py
hl7parser/helpers/: name.py  string.py
hl7parser/ir/: __init__.py  component_def.py  datatype_def.py  field_ref.py  group_def.py  member_ref.py  message_def.py  segment_def.py  version.py
tests/: test_smoke.py
